Implement computer adversaries
