# src/main/resources/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Rock Paper Scissers
+  title: Rock Paper Scissors
   description: |-
     A game of rock paper scissors.
   version: 1.0.0
@@ -14,6 +14,11 @@ paths:
       summary: Start a new game
       operationId: newGame
       description: Create a game, get back its ID
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GameOptions'
       responses:
         '200':
           description: Successful operation
@@ -160,6 +165,15 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/GameDetails"
+
+    GameOptions:
+      type: object
+      properties:
+        humanPlayers:
+          type: integer
+          default: 1
+          minimum: 0
+          maximum: 2
 
     Error:
       type: object
